# graphai

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  concept_detection.html  definitions.py  example-config.ini  genindex.html  graph.html  graphai.api.auth.auth_utils.html  graphai.api.auth.html  graphai.api.auth.log.html  graphai.api.auth.router.html  graphai.api.celery_jobs.common.html  graphai.api.celery_jobs.embedding.html  graphai.api.celery_jobs.html  graphai.api.celery_jobs.image.html  graphai.api.celery_jobs.ontology.html  graphai.api.celery_jobs.scraping.html  graphai.api.celery_jobs.translation.html  graphai.api.celery_jobs.video.html  graphai.api.celery_jobs.voice.html  graphai.api.celery_tasks.common.html  graphai.api.celery_tasks.completion.html  graphai.api.celery_tasks.embedding.html  graphai.api.celery_tasks.html  graphai.api.celery_tasks.image.html  graphai.api.celery_tasks.ontology.html  graphai.api.celery_tasks.scraping.html  graphai.api.celery_tasks.summarization.html  graphai.api.celery_tasks.text.html  graphai.api.celery_tasks.translation.html  graphai.api.celery_tasks.video.html  graphai.api.celery_tasks.voice.html  graphai.api.common.auth_utils.html  graphai.api.common.celery_tools.html  graphai.api.common.embedding.html  graphai.api.common.graph.html  graphai.api.common.html  graphai.api.common.log.html  (+216 more)
.github/workflows/: build-docs.yml  build_docs_and_update_gh-pages.yml  clone-repo.yml  copy-repo.yml  deploy-api.yml  hello-world.yml  install-repo.yml  main.yml  run-tests.yml  update-gh-pages.yml
_sources/: graph.rst.txt  graphai.api.auth.auth_utils.rst.txt  graphai.api.auth.log.rst.txt  graphai.api.auth.router.rst.txt  graphai.api.auth.rst.txt  graphai.api.celery_jobs.common.rst.txt  graphai.api.celery_jobs.embedding.rst.txt  graphai.api.celery_jobs.image.rst.txt  graphai.api.celery_jobs.ontology.rst.txt  graphai.api.celery_jobs.rst.txt  graphai.api.celery_jobs.scraping.rst.txt  graphai.api.celery_jobs.translation.rst.txt  graphai.api.celery_jobs.video.rst.txt  graphai.api.celery_jobs.voice.rst.txt  graphai.api.celery_tasks.common.rst.txt  graphai.api.celery_tasks.completion.rst.txt  graphai.api.celery_tasks.embedding.rst.txt  graphai.api.celery_tasks.image.rst.txt  graphai.api.celery_tasks.ontology.rst.txt  graphai.api.celery_tasks.rst.txt  graphai.api.celery_tasks.scraping.rst.txt  graphai.api.celery_tasks.summarization.rst.txt  graphai.api.celery_tasks.text.rst.txt  graphai.api.celery_tasks.translation.rst.txt  graphai.api.celery_tasks.video.rst.txt  graphai.api.celery_tasks.voice.rst.txt  graphai.api.common.auth_utils.rst.txt  graphai.api.common.celery_tools.rst.txt  graphai.api.common.embedding.rst.txt  graphai.api.common.graph.rst.txt  graphai.api.common.log.rst.txt  graphai.api.common.ontology.rst.txt  graphai.api.common.rst.txt  graphai.api.common.schemas.rst.txt  graphai.api.common.translation.rst.txt  graphai.api.common.utils.rst.txt  graphai.api.common.video.rst.txt  graphai.api.embedding.router.rst.txt  graphai.api.embedding.rst.txt  graphai.api.embedding.schemas.rst.txt  (+199 more)
_sources/concept_detection/: scores.rst.txt  search.rst.txt
api/: common.py  main.py
api/routers/: ontology.py  text.py  video.py
api/schemas/: ontology.py  strip.py  text.py  video.py  wikify.py
concept-detection/: README.md
concept-detection/elasticsearch/: create.py
concept-detection/engine/: deploy-local.sh  deploy-prod.sh  deploy-test.sh  main.py
concept-detection/graph/: deploy-prod.sh  deploy-test.sh  main.py
concept_detection/: README.md  keyword_extraction.py  keywords.html  requirements.txt  scores.html  scores.py  search.html  text.html  wikisearch.py
concept_detection/api/: deploy-prod.sh  main.py  schemas.py
concept_detection/elasticsearch/: create.py  create_index.py  create_mapping.py  populate.py  populate_dummy.py  search.py  test.py
concept_detection/evaluation/: bulk_slides.py  courses_sample.py  db_api.py  ground_truth_keywords_to_results.py  ground_truth_post_text_to_results.py  ground_truth_text_to_keywords.py  ground_truth_text_to_results.py  keyword_extraction_alternatives.py  new_api.py  old_api.py
concept_detection/graph/: deploy-local.sh  main.py  properties.ipynb  schemas.py  scores.py
concept_detection/interfaces/: api.py  db.py  es.py  wp.py
concept_detection/keywords/: extraction.py
concept_detection/search/: elasticwikisearch.py  types.py  (+1 more)
es_scripts/: create_index.py  populate.py  populate_dummy.py  search.py
funding/: concepts.py  data_processing.py  features.py  investment.py  investors.py  io.py  main.py  predict.py  predicting.py  preprocessing.py  script.py  training.py  tuning.ipynb  tuning.py  validation.py  visualization.py
graph/: explore_scores.py  explore_scores_2.py  explore_scores_3.py  properties.ipynb  scores.py
graphai/: __init__.py  definitions.py
interfaces/: api.py  db.py  es.py  wp.py
investment/: aggregate_recent_past.py  check_unit.py  compute_fundraisers_units.py  compute_investors_units.py  compute_investors_units_2.py  compute_jaccard_index.py  concept_configuration.py  create_investments_graph.py  create_investors_graph.ipynb  create_investors_graph.py  data.py  detect_fundraisers_concepts.py  investor_graph.py  investors_graph.py  jaccard_check.py  main.py  parameters.py  predict.py  projections.py  toy_example.py  use_cases.py  validate_prediction.py
models/: page_result.py  wikify_result.py  wikisearch_result.py
ontology/: categories.txt
queries/: README.md  init_auth_db.sql
tests/: README.md  conftest.py  test_app.py  test_completion.py  test_embedding.py  test_ontology.py  test_scraping.py  test_summarization.py  test_text.py  test_translation.py  test_video.py
utils/: breadcrumb.py  progress_bar.py
visualisation/: startups-graph-2.py  startups-graph-3.py  startups-graph-4.py  startups-graph.ipynb  startups-graph.py  startups-trimmed-2.gephi  startups-trimmed.gephi  startups.gephi  startups.gexf
wikimarkup_stripper/: README.md  deploy-test.sh  main.py  requirements-app.txt
wikitext/: README.md  __init__.py  example.py  main.py  wikitext.py
(+482 files in other folders)
