[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphai"
version = "0.3.0"
authors = [
  { name="Aitor Pérez", email="aitor.perez@epfl.ch" },
  { name="Ramtin Yazdanian", email="ramtin.yazdanian@epfl.ch" }
]
description = "The graphai package contains tools and services enhancing the EPFL Graph project with AI-based utilities."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "fastapi>=0.95.0",
    "gunicorn",
    "uvicorn",
    "pydantic>=1.7.4,<1.11.0",
    "requests",
    "httpx",
    "wget",
    "imagehash",
    "fingerprint",
    "openai-whisper",
    "openai>=1.0.0",
    "tiktoken",
    "pytesseract",
    "langdetect",
    "google-cloud-vision",
    "google-cloud-storage",
    "ffmpeg-python",
    "pyacoustid",
    "fuzzywuzzy[speedup]",
    "celery[redis]",
    "flower",
    "kombu",
    "transformers",
    "sentencepiece",
    "sacremoses",
    "pysbd",
    "mysql-connector-python",
    "elasticsearch",
    "unidecode",
    "clean-text",
    "python-rake",
    "nltk",
    "rake-nltk",
    "levenshtein",
    "wikitext-asymptote",
    "flake8",
    "sphinx",
    "sphinx-material",
    "sphinx-rtd-theme",
    "pytest-celery",
    "db-cache-manager>=0.1.0",
    "elasticsearch-interface",
    "scikit-learn",
    "opentelemetry-distro==0.40b0",
    "opentelemetry-exporter-otlp==1.19.0",
    "opentelemetry-instrumentation-fastapi==0.40b0",
    "pyamg",
    "yt-dlp",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pybind11",
    "fasttext-wheel",
    "fasttext-reducer>=0.1.1",
    "cachetools"
]

[tool.setuptools]
packages = ["graphai"]

[project.urls]
"Homepage" = "https://graphai.epfl.ch"
"Documentation" = "https://epflgraph.github.io/graphai/graphai"
"Source code" = "https://github.com/epflgraph/graphai"
"Bug Tracker" = "https://github.com/epflgraph/graphai/issues"
