[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graphai"
version = "0.14.1"
authors = [
  { name="Aitor Pérez", email="aitor.perez@epfl.ch" },
  { name="Ramtin Yazdanian", email="ramtin.yazdanian@epfl.ch" }
]
description = "The graphai package contains tools and services enhancing the EPFL Graph project with AI-based utilities."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "fastapi>=0.95.0",
    "gunicorn",
    "uvicorn",
    "pydantic",
    "requests",
    "httpx",
    "wget",
    "imagehash",
    "fingerprint",
    "openai-whisper",
    "openai",
    "tiktoken",
    "pytesseract",
    "langdetect",
    "google-cloud-vision",
    "google-cloud-storage",
    "ffmpeg-python",
    "pyacoustid",
    "fuzzywuzzy[speedup]",
    "celery[redis]",
    "flower",
    "kombu",
    "transformers",
    "sentencepiece",
    "sacremoses",
    "pysbd",
    "mysql-connector-python",
    "elasticsearch",
    "unidecode",
    "clean-text",
    "python-rake",
    "nltk",
    "rake-nltk",
    "levenshtein",
    "wikitext-asymptote",
    "flake8",
    "sphinx",
    "sphinx-material",
    "sphinx-rtd-theme",
    "pytest-celery",
    "db-cache-manager>=0.2.2",
    "elasticsearch-interface>=0.8.0",
    "scikit-learn",
    "opentelemetry-distro==0.40b0",
    "opentelemetry-exporter-otlp==1.19.0",
    "opentelemetry-instrumentation-fastapi==0.40b0",
    "pyamg",
    "yt-dlp>=2024.7.25",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "pybind11",
    "fasttext-wheel",
    "fasttext-reducer>=0.1.1",
    "cachetools",
    "fastapi-user-limiter>=1.3.0",
    "sentence-transformers",
    "ftfy",
    "pdf2image",
    "pylatexenc",
    "langchain"
]

[tool.setuptools]
packages = ["graphai"]

[project.urls]
"Homepage" = "https://graphai.epfl.ch"
"Documentation" = "https://epflgraph.github.io/graphai/graphai"
"Source code" = "https://github.com/epflgraph/graphai"
"Bug Tracker" = "https://github.com/epflgraph/graphai/issues"
